--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		
+
 		<!-- Library dependencies -->
 		<guava-version>14.0.1</guava-version>
 		<spring-aop-version>3.2.2.RELEASE</spring-aop-version>
@@ -23,17 +23,17 @@
 		<joda-time-hibernate-version>1.3</joda-time-hibernate-version>
 		<jstl-version>1.2</jstl-version>
 		<slf4j-api-version>1.7.5</slf4j-api-version>
-        <slf4j-log4j12-version>1.7.5</slf4j-log4j12-version>
-		
+		<slf4j-log4j12-version>1.7.5</slf4j-log4j12-version>
+
 		<!-- App server provided libraries -->
 		<servlet-api-version>2.5</servlet-api-version>
 		<jsp-api-version>2.1</jsp-api-version>
-		
+
 		<!-- Test libraries -->
 		<testng-version>6.8.5</testng-version>
 		<spring-test-version>3.2.2.RELEASE</spring-test-version>
 		<hsqldb-version>2.2.9</hsqldb-version>
-		
+
 		<!-- Plugins -->
 		<maven-compiler-plugin-version>3.1</maven-compiler-plugin-version>
 		<gmaven-plugin-version>1.5</gmaven-plugin-version>
@@ -54,21 +54,21 @@
 			<version>${spring-aop-version}</version>
 		</dependency>
 		<dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc</artifactId>
-            <version>${spring-webmvc-version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-rest-webmvc</artifactId>
-            <version>1.0.0.RELEASE</version>
-            <exclusions>
-                <exclusion>
-                    <artifactId>logback-classic</artifactId>
-                    <groupId>ch.qos.logback</groupId>
-                </exclusion>
-            </exclusions>
-        </dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>${spring-webmvc-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-rest-webmvc</artifactId>
+			<version>1.0.0.RELEASE</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>logback-classic</artifactId>
+					<groupId>ch.qos.logback</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
 		<dependency>
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjtools</artifactId>
@@ -78,6 +78,16 @@
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
 			<version>3.6.10.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-dbcp</groupId>
+			<artifactId>commons-dbcp</artifactId>
+			<version>1.4</version>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.25</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.validation</groupId>
@@ -180,7 +190,7 @@
 				<executions>
 					<execution>
 						<goals>
-                            <goal>generateStubs</goal>
+							<goal>generateStubs</goal>
 							<goal>compile</goal>
 							<goal>generateTestStubs</goal>
 							<goal>testCompile</goal>
@@ -209,6 +219,34 @@
 				<version>${maven-failsafe-plugin-version}</version>
 				<configuration>
 					<groups>integration-test</groups>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>sql-maven-plugin</artifactId>
+				<version>1.5</version>
+				<dependencies>
+					<dependency>
+						<groupId>mysql</groupId>
+						<artifactId>mysql-connector-java</artifactId>
+						<version>5.1.25</version>
+					</dependency>
+				</dependencies>
+				<configuration>
+					<driver>com.mysql.jdbc.Driver</driver>
+					<url>jdbc:mysql://localhost:3306/dev</url>
+					<username>jherrera</username>
+					<password>1ei8gexw</password>
+					<autocommit>true</autocommit>
+					<srcFiles>
+					    <srcFile>src/main/database/schema/drop.sql</srcFile>
+						<srcFile>src/main/database/schema/tags.sql</srcFile>
+						<srcFile>src/main/database/schema/questions.sql</srcFile>
+						<srcFile>src/main/database/schema/question_tags.sql</srcFile>
+						<srcFile>src/main/database/schema/candidates.sql</srcFile>
+						<srcFile>src/main/database/schema/interviews.sql</srcFile>
+						<srcFile>src/main/database/schema/interview_asked_questions.sql</srcFile>
+					</srcFiles>
 				</configuration>
 			</plugin>
 			<plugin>
