--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -12,17 +12,17 @@ log4j.appender.file.MaxBackupIndex=2
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{ABSOLUTE} [%p] (%t) %c: %m%n
 
-log4j.logger.org.springframework.data=INFO
-log4j.logger.org.springframework.beans=INFO
-log4j.logger.org.springframework.test=INFO
-log4j.logger.org.springframework.context=INFO
-log4j.logger.org.springframework.core=INFO
-log4j.logger.org.springframework.orm=INFO
-log4j.logger.org.springframework.aop=INFO
-log4j.logger.org.springframework.jdbc=INFO
-log4j.logger.org.springframework.transaction=INFO
-log4j.logger.org.springframework.ui=INFO
-log4j.logger.org.springframework.web=INFO
-log4j.logger.org.springframework.jndi=INFO
-log4j.logger.org.hibernate=INFO
-log4j.logger.org.jboss=INFO
+log4j.logger.org.springframework.data=WARN
+log4j.logger.org.springframework.beans=WARN
+log4j.logger.org.springframework.test=WARN
+log4j.logger.org.springframework.context=WARN
+log4j.logger.org.springframework.core=WARN
+log4j.logger.org.springframework.orm=WARN
+log4j.logger.org.springframework.aop=WARN
+log4j.logger.org.springframework.jdbc=WARN
+log4j.logger.org.springframework.transaction=WARN
+log4j.logger.org.springframework.ui=WARN
+log4j.logger.org.springframework.web=WARN
+log4j.logger.org.springframework.jndi=WARN
+log4j.logger.org.hibernate=WARN
+log4j.logger.org.jboss=WARN
