--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ dependencies {
 	compile group: 'org.springframework', name: 'spring-webmvc', version: '3.2.2.RELEASE'
 	compile group: 'org.springframework', name: 'spring-aop', version: '3.2.2.RELEASE'
 	compile group: 'org.springframework', name: 'spring-tx', version: '3.2.2.RELEASE'
-	compile group: 'org.springframework.data', name: 'spring-data-rest-webmvc', version: '1.0.0.RELEASE'
+	compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '1.3.2.RELEASE'
 	compile group: 'org.aspectj', name: 'aspectjtools', version: '1.7.2'
 	compile group: 'org.hibernate', name: 'hibernate-entitymanager', version: '4.2.2.Final'
 	compile group: 'org.hibernate', name: 'hibernate-validator', version: '4.3.0.Final'
