--- a/build.gradle
+++ b/build.gradle
@@ -29,10 +29,10 @@ repositories {
 dependencies {
 	compile group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.1.5'
 	compile group: 'com.google.guava', name: 'guava', version: '14.0.1'
-	compile group: 'org.springframework', name: 'spring-webmvc', version: '3.2.2.RELEASE'
-	compile group: 'org.springframework', name: 'spring-aop', version: '3.2.2.RELEASE'
-	compile group: 'org.springframework', name: 'spring-tx', version: '3.2.2.RELEASE'
-	compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '1.3.2.RELEASE'
+	compile group: 'org.springframework', name: 'spring-webmvc', version: '3.2.3.RELEASE'
+	compile group: 'org.springframework', name: 'spring-aop', version: '3.2.3.RELEASE'
+	compile group: 'org.springframework', name: 'spring-tx', version: '3.2.3.RELEASE'
+	compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '1.3.4.RELEASE'
 	compile group: 'org.aspectj', name: 'aspectjtools', version: '1.7.2'
 	compile group: 'org.hibernate', name: 'hibernate-entitymanager', version: '4.2.2.Final'
 	compile group: 'org.hibernate', name: 'hibernate-validator', version: '4.3.0.Final'
@@ -43,6 +43,7 @@ dependencies {
 	compile group: 'joda-time', name: 'joda-time-hibernate', version: '1.3'
 	compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.5'
 	compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.5'
+    compile group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13'
 	
 	providedCompile group: 'javax.servlet', name: 'servlet-api', version: '2.5'
 	providedCompile group: 'javax.servlet.jsp', name: 'jsp-api', version: '2.1'
@@ -50,7 +51,9 @@ dependencies {
 	runtime group: 'javax.servlet', name: 'jstl', version: '1.2'
 	
 	testCompile group: 'org.testng', name: 'testng', version: '6.8.5'
-	testCompile group: 'org.springframework', name: 'spring-test', version: '3.2.2.RELEASE'
+	testCompile group: 'org.springframework', name: 'spring-test', version: '3.2.3.RELEASE'
+    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.9.5'
+    testCompile group: 'commons-lang', name: 'commons-lang', version: '2.6'
 }
 
 test {
